# servicenow-mcp-server

./: .dockerignore  .env.example  .env.identity-provider.example  .env.oauth.example  .gitignore  Dockerfile  IDENTITY_PROVIDER_SETUP.md  PROMPTS_USAGE.md  README.md  docker-compose.yml  identity_provider_client_example.py  pyproject.toml  requirements.txt  test_create_incident.py  test_fastmcp_client.py  test_oauth_flow.py
old_auth_backup/: mcp_auth_middleware.py
scripts/: run_fastmcp_server.py
src/: __init__.py  config.py  container.py  fastmcp_server.py  fastmcp_server_bkp.py  registry.py
src/api/: __init__.py  client.py  exceptions.py
src/auth/: __init__.py  bearer_token.py  decorators.py  identity_provider.py  oauth_provider.py  scope_validator.py  simple_middleware.py  unified_auth.py
src/handlers/: __init__.py  change_request_handlers.py  incident_handlers.py  incident_task_handlers.py  prompt_handlers.py
src/models/: __init__.py  change_request.py  incident.py  incident_task.py
src/routes/: __init__.py  health.py  oauth.py
src/tools/: __init__.py  change_request_tools.py  incident_task_tools.py  incident_tools.py
test/: test_change_request.py  test_search_incidents.py  test_update_incident.py
